# restaurant

./: .gitignore  .gitmodules  .project  CMakeLists.txt  cocos2dx-lua热更新简单介绍.rdoc  config.json  shell学习记录.txt  testdrawio  推送通知.docx
frameworks/cocos2d-x/cocos/: cocos2d.h
frameworks/cocos2d-x/cocos/2d/: CCFontFreeType.cpp
frameworks/cocos2d-x/cocos/base/: CCProperties.cpp  CMakeLists.txt
frameworks/cocos2d-x/cocos/platform/: CCFileUtils.cpp  CCFileUtils.h  CCImage.cpp  CCSAXParser.cpp
frameworks/cocos2d-x/tools/bindings-generator/: generator.py
frameworks/cocos2d-x/tools/tolua/: auto_bind_test.ini  mgenbindings.py  userconf.ini
frameworks/runtime-src/Classes/: AppDelegate.cpp  jniTest.cpp  jniTest.h
frameworks/runtime-src/proj.android/: build.gradle  gradle.properties  keystore.properties  settings.gradle
frameworks/runtime-src/proj.win32/: restaurant.sln  restaurant.vcxproj
res/ccbi/: MenuCell.ccbi  SelectLayer.ccbi  Tip.ccbi  UpLevelLayer.ccbi  UpgradeLayer.ccbi
src/: config.lua
src/cocos/framework/: display.lua
src/components/: Utils.lua
src/components/constants/: CommonConstants.lua  GameConstants.lua
src/components/info/: Floor.lua  Menu.lua  Money.lua  PlayerInfo.lua
src/components/popview/: PopStyle.lua  PopView.lua
src/ui/MainLayer/: MainLayer.lua
src/ui/PopLayer/: InviteLayer.lua
src/ui/TipLayer/: TipLayer.lua
tools/: luac
tools/encrypt/: CMakeLists.txt  build.sh  encrypt  encrypt_files.sh  main.cpp
tools/tolua/: auto_bind_test.ini  mgenbindings.py
学习/瓦片地图解析(类解析、生命周期）/: 瓦片地图知识分享.docx
(+65 files in other folders)
